src/objects/csordtelcoa__Change_Types__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>LG_AvailableOnMACDPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, the change type will be available for a selection in a Change Type dropdown on the MACD configuration page.</description>
        <inlineHelpText>If set to true, the change type will be available for a selection in a Change Type dropdown on the MACD configuration page.</inlineHelpText>
        <label>Available on MACD Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_MigrateVariety__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, a change type will be treated (in the MACD page, or apex code) as a variety of Migrate.</description>
        <inlineHelpText>If checked, a change type will be treated (in the MACD page, or apex code) as a variety of Migrate.</inlineHelpText>
        <label>Migrate Variety</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidRelatedProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>While doing a MACD, related products will be set to Valid by default</description>
        <inlineHelpText>While doing a MACD, related products will be set to Valid by default</inlineHelpText>
        <label>Valid Related Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Add_To_Existing_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add To Existing Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Allow_Multiple_Subscriptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If these types can be used in multiple subscriptions per opportunity scenario</description>
        <label>Allow Multiple Subscriptions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Auto_Create_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Invoke_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoke Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Process_To_Invoke__c</fullName>
        <label>Process To Invoke</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Request_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Requested_Date_Label__c</fullName>
        <label>Requested Date Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Sort_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>A sort order number</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_Date_Field_API_Name__c</fullName>
        <label>Subscription Date Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Change Types</label>
</CustomObject>